# 4EvaBraids-backend

./: .gitignore  4eva braids design plan.txt  LICENSE.md  README.md  pyproject.toml  setup.sh
app/: main.py
app/src/config/: __init__.py
app/src/controllers/user/: __init__.py  authenticate_user.py  create_access_token.py  create_user.py  delete_user.py  get_all_users.py  get_current_user.py  get_user_by_email.py  get_user_by_id.py  get_user_by_phone_number.py  update_user.py
app/src/data/: __init__.py  blog.py  stats.py  user.py
app/src/exceptions/: __init__.py  already_exists.py  not_found.py
app/src/models/: __init__.py  blog.py  comment.py  email.py  stats.py  user.py
app/src/service/: blog.py  booking.py  stats.py  user.py
app/src/utils/: __init__.py  crypt.py  send_mail.py
app/src/web/: __init__.py  auth.py  blog.py  booking.py  logging.py  stats.py  user.py
app/tests/test_user/: test_user_data.py  test_user_service.py  test_user_web.py
docs/images/: README.md
src/models/: blog.py  comment.py  user.py
