[tool.poetry]
name = "4evabraids-backend"
version = "0.1.0"
description = "The backend server for the 4evabraids backend service"
authors = ["Ukeme Edet <ukemeedet2207@gmail.com>", "Nwofia Victory Chibuike <victorychibuike111@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
motor = "^3.6.0"
pydantic-mongo = "^2.3.0"
bcrypt = "^4.2.1"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pep8 = "^1.7.1"
faker = "^33.1.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
